--- a/index.html
+++ b/index.html
@@ -38,11 +38,10 @@
       display: inline-flex;
     }
     .day-column {
-      flex: 0 0 auto;
-      min-width: calc(100vw / 3);
-      max-width: calc(100vw / 3);
+      flex: 0 0 calc(100vw / 3);
       border-right: 1px solid #ccc;
       display: inline-block;
+      box-sizing: border-box;
     }
     .day-header {
       background: #eee;
@@ -132,6 +131,135 @@
   </style>
 </head>
 <body>
-  <!-- body content remains unchanged -->
+  <div class="header">吉祥寺 (KCJ)</div>
+  <div class="toolbar">
+    <div>前週へ</div>
+    <div>今日に戻る</div>
+    <div>最終週へ</div>
+  </div>
+  <div id="countdown">00:00</div>
+  <div class="scroll-container">
+    <div class="day-rows">
+      <div class="day-row" id="fixed-days"></div>
+      <div class="day-row" id="dynamic-days" style="display:none"></div>
+    </div>
+  </div>
+  <div class="modal" id="seatModal">
+    <div class="modal-content">
+      <h2>※お好きなバイク番号を選んで予約を確定して下さい。</h2>
+      <div class="modal-seat-grid" id="seatGrid"></div>
+      <div class="modal-actions" id="seatActionButtons" style="display:none;">
+        <button onclick="confirmSeatFinal()">チケットで予約する</button>
+      </div>
+      <div class="modal-actions">
+        <button onclick="closeModal()">閉じる</button>
+      </div>
+    </div>
+  </div>
+  <script>
+    const countdown = document.getElementById("countdown");
+    const dynamic = document.getElementById("dynamic-days");
+    const fixedDays = document.getElementById("fixed-days");
+
+    function openModal() {
+      document.getElementById("seatModal").style.display = "flex";
+      const seatGrid = document.getElementById("seatGrid");
+      const seatActions = document.getElementById("seatActionButtons");
+      seatGrid.innerHTML = "";
+      seatActions.style.display = "none";
+      for (let i = 1; i <= 10; i++) {
+        const btn = document.createElement("button");
+        btn.textContent = i;
+        btn.className = "modal-seat-button";
+        if (i === 4) {
+          btn.onclick = () => {
+            btn.classList.add("active");
+            seatActions.style.display = "block";
+          };
+        } else {
+          btn.disabled = true;
+        }
+        seatGrid.appendChild(btn);
+      }
+    }
+
+    function closeModal() {
+      document.getElementById("seatModal").style.display = "none";
+    }
+
+    function confirmSeatFinal() {
+      alert("✨ 予約が完了しました ✨");
+      closeModal();
+    }
+
+    function createDayColumn(dateStr, lessons = []) {
+      const col = document.createElement("div");
+      col.className = "day-column";
+
+      const head = document.createElement("div");
+      head.className = "day-header";
+      head.textContent = dateStr;
+      col.appendChild(head);
+
+      lessons.forEach(lesson => {
+        const box = document.createElement("div");
+        box.className = lesson.link ? "lesson-box highlight" : "lesson-box";
+        if (lesson.link) {
+          box.onclick = () => openModal();
+        }
+        box.innerHTML = `${lesson.time}<br>${lesson.text}<br>${lesson.instructor}`;
+        col.appendChild(box);
+      });
+      return col;
+    }
+
+    const lessonSamples = [
+      { time: "08:45 - 09:30", text: "BB1 Comp 1", instructor: "S.Risa" },
+      { time: "10:00 - 10:45", text: "BB2 10s 4", instructor: "Shunsuke" },
+      { time: "11:15 - 12:00", text: "BB1 House 1", instructor: "Ryo" },
+      { time: "12:30 - 13:15", text: "BB2 CVHS", instructor: "Hiromu" },
+      { time: "15:00 - 15:45", text: "BB1 10s 2", instructor: "Hiromu" },
+      { time: "16:30 - 17:15", text: "BB2 NOW 1", instructor: "Hiromu" },
+      { time: "18:30 - 19:15", text: "BB2 10s 3", instructor: "Meg" },
+      { time: "19:45 - 20:30", text: "BB1 Comp 1", instructor: "S.Risa" }
+    ];
+
+    function renderSchedule(container, startDate, endDate) {
+      let day = new Date(startDate);
+      while (day <= endDate) {
+        const mmdd = `${day.getMonth() + 1}/${day.getDate()} (${"日月火水木金土"[day.getDay()]})`;
+        const shuffled = lessonSamples.sort(() => 0.5 - Math.random());
+        container.appendChild(createDayColumn(mmdd, shuffled));
+        day.setDate(day.getDate() + 1);
+      }
+    }
+
+    renderSchedule(fixedDays, new Date("2024-06-16"), new Date("2024-07-04"));
+
+    const dynamicDays = document.getElementById("dynamic-days");
+    for (let i = 5; i <= 11; i++) {
+      if (i === 10) {
+        dynamicDays.appendChild(createDayColumn("7/10 (水)", [
+          { time: "18:00 - 19:00", text: "FEEL HIGH", instructor: "S.Kaori", link: true },
+          { time: "19:30 - 20:15", text: "BB2 Rock2", instructor: "Yoshifumi & S.Kaori", link: true },
+          { time: "20:30 - 21:15", text: "BB2 SUMMER2", instructor: "Yoshifumi", link: true }
+        ]));
+      } else {
+        dynamicDays.appendChild(createDayColumn(`7/${i} (${"金土日月火水木"[i - 5]})`));
+      }
+    }
+
+    function shouldShowDynamic(min, sec) {
+      return min % 3 === 0 && sec < 120;
+    }
+
+    setInterval(() => {
+      const now = new Date();
+      const min = now.getMinutes();
+      const sec = now.getSeconds();
+      countdown.textContent = `${String(min).padStart(2, '0')}:${String(sec).padStart(2, '0')}`;
+      dynamic.style.display = shouldShowDynamic(min, sec) ? "flex" : "none";
+    }, 1000);
+  </script>
 </body>
 </html>
