--- a/index.html
+++ b/index.html
@@ -37,9 +37,8 @@
     .day-row {
       display: inline-flex;
     }
-    .day-column {
-      flex: 0 0 auto;
-      min-width: 140px;
+　　　.day-column {
+      flex: 0 0 calc(100vw / 3);
       border-right: 1px solid #ccc;
       display: inline-block;
     }
