--- a/index.html
+++ b/index.html
@@ -37,11 +37,12 @@
     .day-row {
       display: inline-flex;
     }
-　　　.day-column {
-      flex: 0 0 calc(100vw / 3);
-      border-right: 1px solid #ccc;
-      display: inline-block;
-    }
+.day-column {
+  flex: 0 0 calc(100vw / 3);
+  border-right: 1px solid #ccc;
+  display: inline-block;
+  box-sizing: border-box;
+}
     .day-header {
       background: #eee;
       padding: 8px;
