--- a/index.html
+++ b/index.html
@@ -205,8 +205,20 @@
 function showFinalConfirmation() {
   const modalContent = document.getElementById("modalContent");
   modalContent.innerHTML = `
+    <h2 style="font-size: 1.2em; font-weight: bold;">チケット消費確認</h2>
+    <p style="margin-bottom: 16px;">以下のチケットを使用して予約を確定します。<br>よろしいですか？</p>
+    <div style="margin: 16px 0; font-weight: bold; border: 1px solid #ccc; padding: 12px;">
+      イベントチケット × 1枚
+    </div>
+    <p style="color: red; font-size: 0.85em; margin-bottom: 8px;">
+      ※受講完了時点で有効期限の短いチケットが<br>自動的に消費されます。
+    </p>
+    <div style="margin-bottom: 20px;">
+      <strong>所持チケット</strong><br>
+      ・2025年12月12日まで × 1枚
+    </div>
     <div class="modal-actions vertical">
-      <button onclick="confirmSeatFinal()">チケットで予約する</button>
+      <button onclick="confirmSeatFinal()">予約を確定する</button>
       <button onclick="closeModal()">閉じる</button>
     </div>
   `;
