--- a/index.html
+++ b/index.html
@@ -220,16 +220,20 @@ function showFinalConfirmation() {
       </div>
     </div>
     <div style="display: flex; justify-content: space-between; align-items: center;">
-      <button onclick="closeModal()" style="background: none; border: none; color: #666; font-size: 0.95em; cursor: pointer;">
+      <button onclick="closeModal()" style="background: none; border: none; color: #666; font-size: 1em; cursor: pointer;">
         閉じる
       </button>
+    </div>
+    <div style="margin-top: 16px;">
       <button onclick="confirmSeatFinal()" style="
         background-color: #000;
         color: #fff;
         border: none;
-        padding: 12px 24px;
-        border-radius: 6px;
+        width: 100%;
+        padding: 14px 0;
         font-size: 1em;
+        font-weight: bold;
+        border-radius: 6px;
         cursor: pointer;
       ">
         予約を確定する
