--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@ function confirmSeatFinal() {
       }
     }
 
-    renderSchedule(fixedDays, new Date(2024, 5, 20), new Date(2024, 6, 4));
+    renderSchedule(fixedDays, new Date("2025-06-20"), new Date("2025-07-04"));
 
     const dynamicDays = document.getElementById("dynamic-days");
     for (let i = 5; i <= 11; i++) {
